2004-07-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Exporter.py: Fix EXPAND/FILL state of the chooser widget.
	* src/DbPrompter.py (SaveAsDbPrompter): Remove class.

2004-07-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteGedcom.py: use the correct id value

2004-07-12  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Exporter.py: Keep track of added extra pages.
	* src/plugins/WriteGedcom.py: Switch from radiobuttons to menu
	for the encoding choice. 
	* src/plugins/gedcomexport.glade: Clean up interface.
	* src/plugins/ReadGedcom.py (GedcomParser.__init__): Use
	universal newline mode to work with Mac newlines. 

2004-07-11  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: handle deleting of parent properly
	* src/plugins/WriteGedcom.py: revert to using GRAMPS ID values
	* src/plugins/WriteXML.py: use proper ID values

2004-07-10  Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Update.
	* src/Exporter.py: Clean up, add doc strings.
	* src/plugins/WriteGedcom.py: Change registration. 

	* src/plugins/WriteGedcom.py: Rewrite to enable passing the 
	options interface.
	* src/Exporter.py: Use options if given by the plugin.
	* src/plugins/gedcomexport.glade: Update to work with the druid.
	* src/WriteXML.py: Add person to the export function arugments.

2004-07-09  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddMedia.py: Handle the new file selector
	* src/MediaView.py: redraw list properly
	* src/FamilyView.py: fix removal of parents

2004-07-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (on_export_activate): Switch to new Exporter.
	* src/WriteXML.py: Change registration. Return 1 on success and 
	0 when on failure.
	* src/Utils.py (get_new_filename): Add function.
	* src/DbPrompter.py (get_new_filename): Remove function.
	* src/Exporter.py: Add to CVS.
	* src/Makefile.am: Ship Exporter.py.
	* src/Plugins.py (register_export): Change to the new scheme.
