@@ -1,6 +1,7 @@
 2004-07-13  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/Exporter.py: Fix EXPAND/FILL state of the chooser widget.
 	* src/DbPrompter.py (SaveAsDbPrompter): Remove class.
+	* src/plugins/WriteGedcom.py: Fix image path problem.
 
 2004-07-12  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/plugins/WriteGedcom.py: use the correct id value
